+ Added new item: Potion Bag. With this item, you can hold all of the potions you collect. + Fixed some music playing code (still some errors to fix, but I can change songs now... + Added placeholder music for the title, it's a song that comes with OpenMPT, I figured it would be a better fit than any of my songs (all of mine tend to be very fast paced and upbeat, not really fitting the atmosphere). = Messed around with making some characters unlockable, it's nowhere near finished, but in the final every character besides Kyle, Iris and Chomp will need to be unlocked.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,9 @@
 <resources>
 
 	<string name="app_name">Pixel\'s Dungeon</string>
+	<string name="TITLE_TEXT_PLAY">Play</string>
+	<string name="TITLE_TEXT_HIGHSCORES">Rankings</string>
+	<string name="TITLE_TEXT_BADGES">Badges</string>
+	<string name="TITLE_TEXT_ABOUT">About</string>
 
 </resources>
